# play_cross_platform_ai_com

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  SharedStructs.hpp  main.cpp
